--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -18,10 +19,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -29,7 +34,23 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
-}
-repositories {
-    mavenCentral()
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    // 必要retrofit依赖
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    // 必要依赖，和Rxjava结合必须用到，下面会提到
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    // 必要依赖，解析json字符所用
+//    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.13.1'
+    implementation 'com.squareup.okio:okio:2.2.2'
+    //非必要依赖， log依赖，如果需要打印OkHttpLog需要添加
+    //    implementation "io.reactivex.rxjava2:rxjava:2.2.7" // 必要rxjava2依赖
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    //选一
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    // 必要rxandrroid依赖，切线程时需要用到
+    //    implementation 'com.trello.rxlifecycle2:rxlifecycle-kotlin:latest.integration'
+    //    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:latest.integration'
+    implementation 'com.uber.autodispose:autodispose:0.6.1'
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
 }
