--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.qxj.conclusion"
-        minSdkVersion 26
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        applicationId rootProject.ext.applicationId
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -33,30 +33,33 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.anko:anko-common:$anko_version"
 
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    // 必要retrofit依赖
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-    // 必要依赖，和Rxjava结合必须用到，下面会提到
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    // 必要依赖，解析json字符所用
-//    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.13.1'
-    implementation 'com.squareup.okio:okio:2.2.2'
+    implementation rootProject.ext.dep.kotlin
+    implementation rootProject.ext.dep.retrofit2
+    implementation rootProject.ext.dep.rxjava2
+    implementation rootProject.ext.dep.autodispose
+    implementation rootProject.ext.dep.glide
+//    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+//    // 必要retrofit依赖
+//    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+//    // 必要依赖，和Rxjava结合必须用到，下面会提到
+//    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+//    // 必要依赖，解析json字符所用
+////    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.13.1'
+//    implementation 'com.squareup.okio:okio:2.2.2'
     //非必要依赖， log依赖，如果需要打印OkHttpLog需要添加
     //    implementation "io.reactivex.rxjava2:rxjava:2.2.7" // 必要rxjava2依赖
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    //选一
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    // 必要rxandrroid依赖，切线程时需要用到
-    //    implementation 'com.trello.rxlifecycle2:rxlifecycle-kotlin:latest.integration'
-    //    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:latest.integration'
-    implementation 'com.uber.autodispose:autodispose:0.6.1'
-    implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
-
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+//    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+//    //选一
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+//    // 必要rxandrroid依赖，切线程时需要用到
+//    //    implementation 'com.trello.rxlifecycle2:rxlifecycle-kotlin:latest.integration'
+//    //    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:latest.integration'
+//    implementation 'com.uber.autodispose:autodispose:0.6.1'
+//    implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.6.1'
+//
+//    implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation project(path: ':commonbase')
     implementation project(path: ':commonsdk')
     implementation project(path: ':commondata')
