--- a/welcome/build.gradle
+++ b/welcome/build.gradle
@@ -26,6 +26,9 @@ android {
 //            }
 //        }
 
+
+        vectorDrawables.useSupportLibrary = true
+
     }
 
     kapt {
@@ -46,6 +49,12 @@ android {
 
     buildTypes {
         release {
+            buildConfigField("boolean", "api", "true")
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            buildConfigField("boolean", "api", "false")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -66,7 +75,15 @@ dependencies {
     implementation library.kotlin
     implementation library.alibaba.json
     implementation library.alibaba.arouter
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     kapt library.alibaba.aroutercompiler
+    implementation library.paging
     implementation project(path: ':commonbase')
     implementation project(path: ':commonsdk')
     implementation project(path: ':commondata')
