--- a/multichannel/build.gradle
+++ b/multichannel/build.gradle
@@ -66,28 +66,28 @@ android {
 //                }
 //            }
             //3.0
-            applicationVariants.all { variant ->
-                variant.outputs.all {output ->
-                    def buildTime = new Date().format("yyyyMMdd")
-                    outputFileName = "Multichannel_${variant.versionCode}-${variant.versionName}-${buildTime}.apk"
-                }
-
-
-//                variant.outputs.all { output ->
-//                    if (!variant.buildType.isDebuggable()) {
-//                        //获取签名的名字
-//                        //要被替换的源字符串
-//                        def buildTime = new Date().format("yyyyMMdd")
-//                        def sourceFile = "-${variant.flavorName}-${variant.buildType.name}"
-//                        //替换的字符串
-//                        def replaceFile = "_v${variant.mergedFlavor.versionName}_${variant.flavorName}_${variant.buildType.name}_${buildTime}"
-//                        outputFileName = output.outputFile.name.replace(sourceFile, replaceFile)
-//
-//
-//                    }
+//            applicationVariants.all { variant ->
+//                variant.outputs.all {output ->
+//                    def buildTime = new Date().format("yyyyMMdd")
+//                    outputFileName = "Multichannel_${variant.versionCode}-${variant.versionName}-${buildTime}.apk"
 //                }
-
-            }
+//
+//
+////                variant.outputs.all { output ->
+////                    if (!variant.buildType.isDebuggable()) {
+////                        //获取签名的名字
+////                        //要被替换的源字符串
+////                        def buildTime = new Date().format("yyyyMMdd")
+////                        def sourceFile = "-${variant.flavorName}-${variant.buildType.name}"
+////                        //替换的字符串
+////                        def replaceFile = "_v${variant.mergedFlavor.versionName}_${variant.flavorName}_${variant.buildType.name}_${buildTime}"
+////                        outputFileName = output.outputFile.name.replace(sourceFile, replaceFile)
+////
+////
+////                    }
+////                }
+//
+//            }
         }
     }
 
