--- a/lib/commonsdk/src/main/AndroidManifest.xml
+++ b/lib/commonsdk/src/main/AndroidManifest.xml
@@ -5,11 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
-        <service
-            android:name=".router.InitializeService"
-            android:exported="false">
+        <meta-data android:name="com.qxj.commonsdk.image.OkHttpLibraryGlideModule"
+            android:value="GlideModule">
 
-        </service>
+        </meta-data>
     </application>
 
 </manifest>
