--- a/.android/local.properties
+++ b/.android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=E:\\Work\\Android\\Sdk
-flutter.sdk=E:\\Work\\Flutter\\flutter
+sdk.dir=/home/qin/Android/Sdk
+flutter.sdk=/home/qin/Flutter/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
