feat(16 state): 添加十六进制状态

--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 30 17:24:33 CST 2019
-ndk.dir=/home/qin/Android/Sdk/ndk-bundle
-sdk.dir=/home/qin/Android/Sdk
+#Tue Jul 02 20:14:29 CST 2019
+ndk.dir=C\:\\Users\\xiaojie.qin\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\xiaojie.qin\\AppData\\Local\\Android\\Sdk
