--- a/welcome/build.gradle
+++ b/welcome/build.gradle
@@ -90,4 +90,8 @@ dependencies {
     implementation library.paging
     implementation library.kotlinx.coroutines
     implementation project(path: ':commonbase')
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
