--- a/.android/app/src/main/AndroidManifest.xml
+++ b/.android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
+            tools:replace="android:appComponentFactory"
+            android:appComponentFactory="11"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
