--- a/.android/local.properties
+++ b/.android/local.properties
@@ -1,5 +1,6 @@
-sdk.dir=C:\\Users\\xiaojie.qin\\AppData\\Local\\Android\\Sdk
-flutter.sdk=C:\\Users\\xiaojie.qin\\AppData\\Local\\flutter
+ndk.dir=/home/qin/Android/Sdk/ndk-bundle
+sdk.dir=/home/qin/Android/Sdk
+flutter.sdk=/home/qin/Flutter/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
