feat(socket): short socket

--- a/welcome/build.gradle
+++ b/welcome/build.gradle
@@ -93,6 +93,9 @@ dependencies {
     implementation project(path: ':dialog')
     implementation project(path: ':socket')
 
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation project(path: ':logger')
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
