--- a/lib/socket/build.gradle
+++ b/lib/socket/build.gradle
@@ -3,15 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'//kapt3
 
-def config = rootProject.ext.android
-def library = rootProject.ext.dep
 android {
-    compileSdkVersion config.compileSdkVersion
+    compileSdkVersion 28
     defaultConfig {
-        minSdkVersion config.minSdkVersion
-        targetSdkVersion config.targetSdkVersion
+        minSdkVersion 19
+        targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -24,20 +22,50 @@ android {
         }
     }
 
+    lintOptions {  //build release 版本时开启lint检测
+        checkReleaseBuilds true
+        //lint 遇到error时继续构建，true为不继续构建(默认)，false为继续构建
+        abortOnError true
+    }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+
 }
+
+//1.make task 'assemble'
+//2.make task 'makeJar'
+task clearJar(type: Delete) {
+    delete 'build/libs/socket-release_v1.0.2.jar'
+}
+task makeJar(type: Jar) {
+    archivesBaseName = 'socket-release_v1.0.2'//jar包的名字，随便命名
+
+    //打包class文件
+//    from file('build/intermediates/packaged-classes/release/lib/mina-core-2.1.3.jar')
+//    from (project.zipTree('libs/mina-core-2.1.3.jar'))
+    from (project.zipTree('build/intermediates/packaged-classes/release/classes.jar'))
+    //打包编译产物
+//    from file('build/tmp/kotlin-classes/release/')
+    destinationDir = file('build/libs')//jar 目录
+
+    //打包源码
+//    include('com/geely/gic/map/*') //重命名
+    //去掉不需要打包的目录和文件
+//    exclude('test/', 'BuildConfig.class', 'R.class')
+//    //去掉R开头的文件
+//    exclude { it.name.startsWith('R') }
+
+}
+makeJar.dependsOn(clearJar, build)
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation library.support
-    implementation library.kotlin
-
-
-    implementation library.kotlinx.coroutines
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation project(path: ':logger')
-
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
