--- a/welcome/src/main/AndroidManifest.xml
+++ b/welcome/src/main/AndroidManifest.xml
@@ -2,6 +2,47 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hymnal.welcome">
 
+    <application>
+        <activity android:name=".koin.SampleActivity">
+
+        </activity>
+
+        <activity android:name=".ui.home.Home2Activity">
+
+        </activity>
+
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.second.SecondActivity" />
+        <activity android:name=".ui.CustomGroupActivity" />
+        <activity android:name=".ui.web.URLReceiveActivity">
+            <intent-filter>
+
+                <!-- host、scheme 字段，点击url会根据这两个字段调起本地的Activity -->
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="111"
+                    android:scheme="arouter" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.web.URLWebActivity" />
+        <activity android:name=".ui.web.URLWebTwoActivity"></activity>
+        <service
+            android:name=".service.SocketService"
+            android:enabled="true"
+            android:exported="true"></service>
+    </application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,21 +56,21 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 硬件加速对X5视频播放非常重要，建议开启 -->
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- 蒲公英 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" /> <!-- 硬件加速对X5视频播放非常重要，建议开启 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.GET_TASKS" /> <!-- 蒲公英 -->
     <!-- 必选 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 获取网络状态 -->
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- 网络通信 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- 获取设备信息 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 获取MAC地址 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 读写sdcard，storage等等 -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 允许程序录制音频 -->
-    <uses-permission android:name="android.permission.GET_TASKS" /> <!-- 可选 -->
-    <uses-permission android:name="android.permission.READ_LOGS" /> <!-- 获取logcat日志 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 获取网络状态 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 网络通信 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 获取设备信息 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- 获取MAC地址 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 读写sdcard，storage等等 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 允许程序录制音频 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 可选 -->
+    <uses-permission android:name="android.permission.GET_TASKS" /> <!-- 获取logcat日志 -->
     <!-- android o -->
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" /> <!-- bugly -->
+    <uses-permission android:name="android.permission.READ_LOGS" /> <!-- bugly -->
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -38,50 +79,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <application>
-        <service
-            android:name=".service.SocketService"
-            android:enabled="true"
-            android:exported="true">
-
-        </service>
-
-        <activity
-            android:name=".ui.home.Home2Activity">
-
-        </activity>
-        <activity
-            android:name=".ui.home.HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
-        <activity android:name=".ui.second.SecondActivity" />
-        <activity android:name=".ui.CustomGroupActivity" />
-        <activity android:name=".ui.web.URLReceiveActivity">
-            <intent-filter>
-
-                <!-- host、scheme 字段，点击url会根据这两个字段调起本地的Activity -->
-                <data
-                    android:host="111"
-                    android:scheme="arouter" />
-
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".ui.web.URLWebActivity" />
-        <activity android:name=".ui.web.URLWebTwoActivity">
-
-        </activity>
-    </application>
 
 </manifest>
