--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ org.gradle.jvmargs=-Xmx1536m
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-isModule=true
+isModule=false
 isDebug=true
 android.useAndroidX=true
 android.enableJetifier=true
