--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-//    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 //    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation library.support
@@ -66,6 +66,9 @@ dependencies {
     implementation library.alibaba.json
 
     implementation library.alibaba.arouter
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
     kapt library.alibaba.aroutercompiler
 
     implementation library.vector
@@ -75,10 +78,11 @@ dependencies {
     implementation library.paging
     implementation library.kotlinx.coroutines
     implementation project(path: ':commonbase')
-    implementation project(path: ':dialog')
 
-    implementation 'com.github.Hymnal-Qin:logger-core:v1.1.1'
-    implementation 'com.github.Hymnal-Qin:socket-core:v1.1.0'
+//    implementation 'com.github.Hymnal-Qin:logger-core:v1.1.1'
+//    implementation 'com.github.Hymnal-Qin:socket-core:v1.1.4'
+//    implementation 'com.github.Hymnal-Qin:androidx-alert:v1.0.0'
+//    implementation 'com.github.Hymnal-Qin:lbs:v1.0.3'
     implementation 'org.slf4j:slf4j-api:1.7.26'
 
     if (isModule.toBoolean()) {
